# A.G.I-Seed-

./: .gitignore  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  governance_task.md  milestone_proposal.md
.github/workflows/: docs-check.yml  python-tests.yml
benchmarks/: README.md  sr_benchmark.py  sr_result.schema.json
benchmarks/examples/: trial_004_sr_input.json
docs/: AGI_SEED_UNIFIED_MASTER_HANDOFF.md
tests/: test_sr_benchmark.py
